// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Picture Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
  >
    <img
      alt="It one image"
      className="image"
      role=""
      src="https://loremflickr.com/300/200?lock=1"
      style={
        Object {
          "height": "auto",
          "maxWidth": "200px",
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image Decorative 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
  >
    <img
      alt=""
      className="image"
      role="presentation"
      src="https://loremflickr.com/300/200?lock=1"
      style={
        Object {
          "height": "auto",
          "maxWidth": "200px",
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image Rounded 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
  >
    <img
      alt="It one image"
      className="image is-rounded"
      role=""
      src="https://loremflickr.com/300/200?lock=1"
      style={
        Object {
          "height": 200,
          "maxWidth": 200,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image Rounder With Border 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
  >
    <img
      alt="It one image"
      className="image is-rounded with-border"
      role=""
      src="https://loremflickr.com/300/200?lock=1"
      style={
        Object {
          "height": 200,
          "maxWidth": 200,
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Image With Border 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
  >
    <img
      alt="It one image"
      className="image with-border"
      role=""
      src="https://loremflickr.com/300/200?lock=1"
      style={
        Object {
          "height": "auto",
          "maxWidth": "200px",
        }
      }
    />
  </picture>
</div>
`;

exports[`Storyshots Atoms/Picture Source 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <picture
    className="picture"
  >
    <source
      media="( max-width: 375px )"
      srcSet="https://loremflickr.com/150/100?lock=4"
    />
    <source
      media="( max-width: 800px )"
      srcSet="https://loremflickr.com/300/200?lock=2"
    />
    <source
      media="( max-width: 10240px )"
      srcSet="https://loremflickr.com/600/400?lock=3"
    />
    <img
      alt="It one image"
      className="image"
      role=""
      src="https://loremflickr.com/300/200?lock=1"
      style={
        Object {
          "height": "auto",
          "maxWidth": "200px",
        }
      }
    />
  </picture>
</div>
`;
